--- a/index.html
+++ b/index.html
@@ -77,16 +77,76 @@
     </thead>
     <tbody>
       <tr>
-        <td><button id="task1-btn" onclick="startTimer('task1')">Task 1</button> - Set up experiment</td>
+        <td><button id="task1-btn" onclick="startTimer('task1')">Task 1</button> Sitting at desk</td>
         <td><span id="task1-timer" class="timer">0m 0s</span></td>
       </tr>
       <tr>
-        <td><button id="task2-btn" onclick="startTimer('task2')">Task 2</button> - Conduct experiment</td>
+        <td><button id="task2-btn" onclick="startTimer('task2')">Task 2</button> Walking in DFKI</td>
         <td><span id="task2-timer" class="timer">0m 0s</span></td>
       </tr>
       <tr>
-        <td><button id="task3-btn" onclick="startTimer('task3')">Task 3</button> - Analyze results</td>
+        <td><button id="task3-btn" onclick="startTimer('task3')">Task 3</button> Standing to fill Water</td>
         <td><span id="task3-timer" class="timer">0m 0s</span></td>
+      </tr>
+      <tr>
+        <td><button id="task4-btn" onclick="startTimer('task4')">Task 4</button> Standing at desk</td>
+        <td><span id="task4-timer" class="timer">0m 0s</span></td>
+      </tr>
+      <tr>
+        <td><button id="task5-btn" onclick="startTimer('task5')">Task 5</button> Descending Stairs(Grey)</td>
+        <td><span id="task5-timer" class="timer">0m 0s</span></td>
+      </tr>
+      <tr>
+        <td><button id="task6-btn" onclick="startTimer('task6')">Task 6</button> Descending Elevator</td>
+        <td><span id="task6-timer" class="timer">0m 0s</span></td>
+      </tr>
+      <tr>
+        <td><button id="task7-btn" onclick="startTimer('task7')">Task 7</button> Descending Stairs(Wood)</td>
+        <td><span id="task7-timer" class="timer">0m 0s</span></td>
+      </tr>
+      <tr>
+        <td><button id="task8-btn" onclick="startTimer('task8')">Task 8</button> Walking on Pavement</td>
+        <td><span id="task8-timer" class="timer">0m 0s</span></td>
+      </tr>
+      <tr>
+        <td><button id="task9-btn" onclick="startTimer('task9')">Task 9</button> Walking on Tarmac</td>
+        <td><span id="task9-timer" class="timer">0m 0s</span></td>
+      </tr>
+      <tr>
+        <td><button id="task10-btn" onclick="startTimer('task10')">Task 10</button> Walking in Supermarket</td>
+        <td><span id="task10-timer" class="timer">0m 0s</span></td>
+      </tr>
+      <tr>
+        <td><button id="task11-btn" onclick="startTimer('task11')">Task 11</button> Standing at Supermarket</td>
+        <td><span id="task11-timer" class="timer">0m 0s</span></td>
+      </tr>
+      <tr>
+        <td><button id="task12-btn" onclick="startTimer('task12')">Task 12</button> Ascending Stairs(Wood)</td>
+        <td><span id="task12-timer" class="timer">0m 0s</span></td>
+      </tr>
+      <tr>
+        <td><button id="task13-btn" onclick="startTimer('task13')">Task 13</button> Ascending Stairs(Grey)</td>
+        <td><span id="task13-timer" class="timer">0m 0s</span></td>
+      </tr>
+      <tr>
+        <td><button id="task14-btn" onclick="startTimer('task14')">Task 14</button> Ascending Elevator</td>
+        <td><span id="task14-timer" class="timer">0m 0s</span></td>
+      </tr>
+      <tr>
+        <td><button id="task15-btn" onclick="startTimer('task15')">Task 15</button> Standing on Pavement</td>
+        <td><span id="task15-timer" class="timer">0m 0s</span></td>
+      </tr>
+      <tr>
+        <td><button id="task16-btn" onclick="startTimer('task16')">Task 16</button> Inside the bus</td>
+        <td><span id="task16-timer" class="timer">0m 0s</span></td>
+      </tr>
+      <tr>
+        <td><button id="task17-btn" onclick="startTimer('task17')">Task 17</button> Miscellaneous</td>
+        <td><span id="task17-timer" class="timer">0m 0s</span></td>
+      </tr>
+      <tr>
+        <td><button id="task18-btn" onclick="startTimer('task18')">Task 18</button> No Activity</td>
+        <td><span id="task18-timer" class="timer">0m 0s</span></td>
       </tr>
     </tbody>
   </table>
