--- a/index.html
+++ b/index.html
@@ -84,15 +84,15 @@
     </thead>
     <tbody>
       <tr style="background-color: #6fc276;">
-        <td><button id="task1-btn" onclick="startTimer('task1')">Task 1</button> Sitting - Desk</td>
+        <td><button id="task1-btn" onclick="startTimer('task1')">Task 1</button> Sitting - DFKI(Carpet)</td>
         <td><span id="task1-timer" class="timer">0m 0s</span></td>
       </tr>
       <tr style="background-color: #eed7a1;">
-        <td><button id="task2-btn" onclick="startTimer('task2')">Task 2</button> Standing - DFKI(Carpet)</td>
+        <td><button id="task2-btn" onclick="startTimer('task2')">Task 2</button> Standing - DFKI(Tiles)</td>
         <td><span id="task2-timer" class="timer">0m 0s</span></td>
       </tr>
       <tr style="background-color: #eed7a1;">
-        <td><button id="task3-btn" onclick="startTimer('task3')">Task 3</button> Standing - DFKI(Tiles)</td>
+        <td><button id="task3-btn" onclick="startTimer('task3')">Task 3</button> Standing - DFKI(Carpet)</td>
         <td><span id="task3-timer" class="timer">0m 0s</span></td>
       </tr>
       <tr style="background-color: #eed7a1;">
@@ -100,11 +100,11 @@
         <td><span id="task4-timer" class="timer">0m 0s</span></td>
       </tr>
       <tr style="background-color: #eed7a1;">
-        <td><button id="task5-btn" onclick="startTimer('task5')">Task 5</button> Standing - Pavement</td>
+        <td><button id="task5-btn" onclick="startTimer('task5')">Task 5</button> Standing - Grass</td>
         <td><span id="task5-timer" class="timer">0m 0s</span></td>
       </tr>
-      <tr style="background-color: 	#b9e2f5;">
-        <td><button id="task6-btn" onclick="startTimer('task6')">Task 6</button> Walking - DFKI(Carpet)</td>
+      <tr style="background-color: #eed7a1;">
+        <td><button id="task6-btn" onclick="startTimer('task6')">Task 6</button> Standing - Pavement</td>
         <td><span id="task6-timer" class="timer">0m 0s</span></td>
       </tr>
       <tr style="background-color: 	#b9e2f5;">
@@ -112,76 +112,84 @@
         <td><span id="task7-timer" class="timer">0m 0s</span></td>
       </tr>
       <tr style="background-color: 	#b9e2f5;">
-        <td><button id="task8-btn" onclick="startTimer('task8')">Task 8</button> Walking - Supermarket</td>
+        <td><button id="task8-btn" onclick="startTimer('task8')">Task 8</button> Walking - DFKI(Carpet)</td>
         <td><span id="task8-timer" class="timer">0m 0s</span></td>
       </tr>
       <tr style="background-color: 	#b9e2f5;">
-        <td><button id="task9-btn" onclick="startTimer('task9')">Task 9</button> Walking - Pavement</td>
+        <td><button id="task9-btn" onclick="startTimer('task9')">Task 9</button> Walking - Supermarket</td>
         <td><span id="task9-timer" class="timer">0m 0s</span></td>
       </tr>
       <tr style="background-color: 	#b9e2f5;">
-        <td><button id="task10-btn" onclick="startTimer('task10')">Task 10</button> Walking - Tarmac</td>
+        <td><button id="task10-btn" onclick="startTimer('task10')">Task 10</button> Walking - Grass</td>
         <td><span id="task10-timer" class="timer">0m 0s</span></td>
       </tr>
-      <tr style="background-color: #fff49b;">
-        <td><button id="task11-btn" onclick="startTimer('task11')">Task 11</button> Descending - Stairs(Wood)</td>
+      <tr style="background-color: 	#b9e2f5;">
+        <td><button id="task11-btn" onclick="startTimer('task11')">Task 11</button> Walking - Tarmac</td>
         <td><span id="task11-timer" class="timer">0m 0s</span></td>
       </tr>
-      <tr style="background-color: #fff49b;">
-        <td><button id="task12-btn" onclick="startTimer('task12')">Task 12</button> Descending - Stairs(Grey)</td>
+      <tr style="background-color: 	#b9e2f5;">
+        <td><button id="task12-btn" onclick="startTimer('task12')">Task 12</button> Walking - Pavement</td>
         <td><span id="task12-timer" class="timer">0m 0s</span></td>
       </tr>
       <tr style="background-color: #fff49b;">
-        <td><button id="task13-btn" onclick="startTimer('task13')">Task 13</button> Descending - Elevator</td>
+        <td><button id="task13-btn" onclick="startTimer('task13')">Task 13</button> Descending - Stairs(Wood)</td>
         <td><span id="task13-timer" class="timer">0m 0s</span></td>
       </tr>
-      <tr style="background-color: 	#ecc9c9;">
-        <td><button id="task14-btn" onclick="startTimer('task14')">Task 14</button> Ascending - Stairs(Wood)</td>
+      <tr style="background-color: #fff49b;">
+        <td><button id="task14-btn" onclick="startTimer('task14')">Task 14</button> Descending - Stairs(Tiles)</td>
         <td><span id="task14-timer" class="timer">0m 0s</span></td>
       </tr>
-      <tr style="background-color: 	#ecc9c9;">
-        <td><button id="task15-btn" onclick="startTimer('task15')">Task 15</button> Ascending - Stairs(Grey)</td>
+      <tr style="background-color: #fff49b;">
+        <td><button id="task15-btn" onclick="startTimer('task15')">Task 15</button> Descending - Elevator</td>
         <td><span id="task15-timer" class="timer">0m 0s</span></td>
       </tr>
       <tr style="background-color: 	#ecc9c9;">
-        <td><button id="task16-btn" onclick="startTimer('task16')">Task 16</button> Ascending - Elevator</td>
+        <td><button id="task16-btn" onclick="startTimer('task16')">Task 16</button> Ascending - Stairs(Wood)</td>
         <td><span id="task16-timer" class="timer">0m 0s</span></td>
       </tr>
       <tr style="background-color: 	#ecc9c9;">
-        <td><button id="task17-btn" onclick="startTimer('task17')">Task 17</button> Ascending - Pavement</td>
+        <td><button id="task17-btn" onclick="startTimer('task17')">Task 17</button> Ascending - Stairs(Tiles)</td>
         <td><span id="task17-timer" class="timer">0m 0s</span></td>
       </tr>
-      <tr style="background-color: #b9e2f5;">
-        <td><button id="task18-btn" onclick="startTimer('task18')">Task 18</button> Inside - Bus</td>
+      <tr style="background-color: 	#ecc9c9;">
+        <td><button id="task18-btn" onclick="startTimer('task18')">Task 18</button> Ascending - Elevator</td>
         <td><span id="task18-timer" class="timer">0m 0s</span></td>
       </tr>
-      <tr style="background-color: #b9e2f5;">
-        <td><button id="task19-btn" onclick="startTimer('task19')">Task 19</button> Inside - Car</td>
+      <tr style="background-color: 	#ecc9c9;">
+        <td><button id="task19-btn" onclick="startTimer('task19')">Task 19</button> Ascending - Pavement</td>
         <td><span id="task19-timer" class="timer">0m 0s</span></td>
       </tr>
-      <tr style="background-color: #6fc276;">
-        <td><button id="task20-btn" onclick="startTimer('task20')">Task 20</button> Riding - Bike(Tarmac)</td>
+      <tr style="background-color: #b9e2f5;">
+        <td><button id="task20-btn" onclick="startTimer('task20')">Task 20</button> Inside - Bus</td>
         <td><span id="task20-timer" class="timer">0m 0s</span></td>
       </tr>
-      <tr style="background-color: #6fc276;">
-        <td><button id="task21-btn" onclick="startTimer('task21')">Task 21</button> Riding - Bike(Pavement)</td>
+      <tr style="background-color: #b9e2f5;">
+        <td><button id="task21-btn" onclick="startTimer('task21')">Task 21</button> Inside - Car</td>
         <td><span id="task21-timer" class="timer">0m 0s</span></td>
       </tr>
-      <tr style="background-color: #fff49b;">
-        <td><button id="task22-btn" onclick="startTimer('task22')">Task 22</button> Sync - Start</td>
+      <tr style="background-color: #6fc276;">
+        <td><button id="task22-btn" onclick="startTimer('task22')">Task 22</button> Biking - Tarmac</td>
         <td><span id="task22-timer" class="timer">0m 0s</span></td>
       </tr>
-      <tr style="background-color: #fff49b;">
-        <td><button id="task23-btn" onclick="startTimer('task23')">Task 23</button> Sync - End</td>
+      <tr style="background-color: #6fc276;">
+        <td><button id="task23-btn" onclick="startTimer('task23')">Task 23</button> Biking - Pavement</td>
         <td><span id="task23-timer" class="timer">0m 0s</span></td>
       </tr>
       <tr style="background-color: #fff49b;">
-        <td><button id="task24-btn" onclick="startTimer('task24')">Task 24</button> Miscellaneous</td>
+        <td><button id="task24-btn" onclick="startTimer('task24')">Task 24</button> Sync - Start</td>
         <td><span id="task24-timer" class="timer">0m 0s</span></td>
       </tr>
       <tr style="background-color: #fff49b;">
-        <td><button id="task25-btn" onclick="startTimer('task25')">Task 25</button> No Activity</td>
+        <td><button id="task25-btn" onclick="startTimer('task25')">Task 25</button> Sync - End</td>
         <td><span id="task25-timer" class="timer">0m 0s</span></td>
+      </tr>
+      <tr style="background-color: #fff49b;">
+        <td><button id="task26-btn" onclick="startTimer('task26')">Task 26</button> Miscellaneous</td>
+        <td><span id="task26-timer" class="timer">0m 0s</span></td>
+      </tr>
+      <tr style="background-color: #fff49b;">
+        <td><button id="task27-btn" onclick="startTimer('task27')">Task 27</button> No Activity</td>
+        <td><span id="task27-timer" class="timer">0m 0s</span></td>
       </tr>
     </tbody>
   </table>
@@ -190,13 +198,14 @@
   <button id="downloadBtn" onclick="downloadJSON()" disabled>Download Timestamp Data</button>
 
   <script>
-    let taskCount = 25; // Keep track of the number of tasks (starting from 3)
+    let taskCount = 27; // Keep track of the number of tasks (starting from 3)
     let timestamps = {
       clickOrder: [] // Now only store click order with description and timestamp
     };
     let timers = {};
     let activeTimer = null;
-    let elapsedTimes = { task1: 0, task2: 0, task3: 0, task4: 0, task5: 0, task6: 0, task7: 0, task8: 0, task9: 0, task10: 0, task11: 0, task12: 0, task13: 0, task14: 0, task15: 0, task16: 0, task17: 0, task18: 0, task19: 0, task20: 0, task21: 0, task22: 0, task23: 0, task24: 0, task25: 0 };
+    let elapsedTimes = { task1: 0, task2: 0, task3: 0, task4: 0, task5: 0, task6: 0, task7: 0, task8: 0, task9: 0, task10: 0, task11: 0, task12: 0, task13: 0,
+      task14: 0, task15: 0, task16: 0, task17: 0, task18: 0, task19: 0, task20: 0, task21: 0, task22: 0, task23: 0, task24: 0, task25: 0, task26: 0, task27: 0 };
 
     // Function to start or resume a timer for a task
     function startTimer(task) {
